Fixing the filename in preview (#1358)

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -84,6 +84,13 @@
           </div>
         </div>
         <div class="grid-row">
+          <div class="grid-row__col grid-row__col--12" *ngIf="showFileNameLengthError">
+            <div class="text-error text-center" *ngIf="showFileNameLengthError">
+              File name cannot exceed 100 characters.
+            </div>
+          </div>
+        </div>
+        <div class="grid-row">
           <div class="grid-row__col grid-row__col--12" *ngIf="PdfUploaded">
             <div class="text-success text-center" *ngIf="PdfUploaded">
               File has been successfully attached.
