--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -24,7 +24,8 @@
           <h2>
             Form 3X
             <ng-container *ngIf="transactionTypeText"> / {{ transactionTypeText }} </ng-container>
-            <ng-container *ngIf="scheduleAction === editScheduleAction"> / Edit </ng-container>
+            <ng-container *ngIf="scheduleAction === editScheduleAction && !cloned"> / Edit </ng-container>
+            <ng-container *ngIf="scheduleAction === editScheduleAction && cloned"> / Clone </ng-container>
           </h2>
         </div>
         <div class="float-right" ngbDropdown>
