Fne 1492 shawn sprint22 (#1373)
* hard code parent apiCall for sched D as temp patch

* temp json for ativity event

* support for 2nd dropdown h4/h6

* New C1

* H4/H6 amounts

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -346,7 +346,7 @@
                           ">
                       </ng-select>
                     </ng-container>
-                    <ng-container *ngIf="col?.type === 'select' && isFieldName(col?.name, 'activity_event_type')">
+                    <!-- <ng-container *ngIf="col?.type === 'select' && isFieldName(col?.name, 'activity_event_type')">
                       <ng-select #activityEventTypeSelect 
                         [items]="activityEventTypes" 
                         (change)="handleActivityEventTypeChange($event, col)"
@@ -362,7 +362,43 @@
                               : ''
                           ">
                       </ng-select>
-                    </ng-container>                     
+                    </ng-container> -->
+                    <ng-container *ngIf="col?.type === 'select' && isFieldName(col?.name, 'activity_event_type')">
+                      <ng-select #activityEventTypeSelect 
+                        [items]="activityEventTypes" 
+                        (change)="handleActivityEventTypeChange($event, col)"
+                        class="forms__select activity-event-type-select" 
+                        [formControlName]="col?.name" 
+                        bindValue="eventType"
+                        bindLabel="eventTypeDescription" 
+                        [selectOnTab]="true"
+                        [ngClass]="
+                            frmIndividualReceipt.get(col?.name)?.invalid &&
+                            (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                              ? 'forms__select-error'
+                              : ''
+                          ">
+                      </ng-select>                     
+                    </ng-container>
+                    <ng-container 
+                      *ngIf="col?.type === 'select' && isFieldName(col?.name, 'activity_event_name')
+                        && activityEventNames"
+                    >
+                      <ng-select #activityEventNameSelect 
+                        [items]="activityEventNames" 
+                        class="forms__select activity-event-name-select" 
+                        [formControlName]="col?.name" 
+                        bindValue="activityEventType"
+                        bindLabel="activityEventDescription" 
+                        [selectOnTab]="true"
+                        [ngClass]="
+                            frmIndividualReceipt.get(col?.name)?.invalid &&
+                            (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                              ? 'forms__select-error'
+                              : ''
+                          ">
+                      </ng-select>
+                    </ng-container>                                         
                     <ng-container *ngIf="col?.type === 'select' && 
                           (isFieldName(col?.name, 'levin_account_id'))">
                       <ng-select #levinAccountSelect 
