--- a/front-end/src/app/forms/sched-h2/sched-h2.component.html
+++ b/front-end/src/app/forms/sched-h2/sched-h2.component.html
@@ -1,3 +1,335 @@
-<p>
-  sched-h2 works!
-</p>
+<ng-template #rt let-r="result" let-t="term">
+  <ngb-highlight [result]="formatTypeaheadItem(r)" [term]="t"></ngb-highlight>
+</ng-template>
+<ng-template #rtOrg let-r="result" let-t="term">
+  <ngb-highlight [result]="formatTypeaheadOrgItem(r)" [term]="t"></ngb-highlight>
+</ng-template>
+<ng-template #rtCommitteeId let-r="result" let-t="term">
+  <ngb-highlight [result]="formatTypeaheadCommitteeId(r)" [term]="t"></ngb-highlight>
+</ng-template>
+<ng-template #rtCandidateId let-r="result" let-t="term">
+  <ngb-highlight [result]="formatTypeaheadCandidateId(r)" [term]="t"></ngb-highlight>
+</ng-template>
+<ng-template #rtCommitteeName let-r="result" let-t="term">
+  <ngb-highlight [result]="formatTypeaheadCommitteeName(r)" [term]="t"></ngb-highlight>
+</ng-template>
+<ng-template #rtCandidate let-r="result" let-t="term">
+  <ngb-highlight [result]="formatTypeaheadCandidate(r)" [term]="t"></ngb-highlight>
+</ng-template>
+<div class="sched-h2-container">
+  <form [formGroup]="schedH2">
+    <header>
+      <div class="header-content">
+        <div class="float-left">
+          <h2>
+            Form 3X
+            <ng-container *ngIf="transactionTypeText"> / {{ transactionTypeText }} </ng-container>
+            <ng-container *ngIf="scheduleAction === editScheduleAction"> / Edit </ng-container>
+          </h2>
+        </div>
+        <div class="float-right" ngbDropdown>
+          <button type="button" class="btn btn-link btn-options" id="dropdownBasic2" ngbDropdownToggle>
+            <span class="ellipsis-icon" aria-hidden="true"></span>
+            <span class="sr-only">Click for more options</span>
+          </button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button class="dropdown-item" (click)="printPreview()"><i class="print-icon"></i> Print</button>
+            <button class="dropdown-item">
+              <i class="file-import-icon" (click)="ImportTransactions()"></i> Import
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <hr />
+        </div>
+      </div>
+    </header>
+
+    <section *ngIf="transactionType === 'ALLOC_H2_RATIO'">
+      <div [hidden]="showPart2" class="paragraph">
+        <div class="row">
+          <div class="col col-md-6">
+            <div class="form-group">
+              <label for="activity_event_name">
+                  Activity or Event Identifier
+                  <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
+                      tooltipClass="form-tooltip">
+                      <i class="info-icon" aria-hidden="true"></i>
+                      <span class="sr-only">Click here for more information</span>
+                  </button>
+              </label>
+              <input class="form-control col-md-10" 
+                type="text" 
+                formControlName="activity_event_name"
+                [ngClass]="schedH2.get('activity_event_name')?.invalid 
+                            ? 'input-field-error' : ''"
+              >
+              <div class="text-error text-left"
+                *ngIf="schedH2.get('activity_event_name').errors?.maxlength"
+              >
+                Only 40 characters allowed.
+              </div>
+            </div>
+          </div>
+          <div class="col col-md-3">
+            <div class="form-group">                    
+              <label for="">
+                  Date
+                  <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
+                      tooltipClass="form-tooltip">
+                      <i class="info-icon" aria-hidden="true"></i>
+                      <span class="sr-only">Click here for more information</span>
+                  </button>
+              </label>
+              <div class="row input-group">
+                  <div class="input-group-prepend">
+                      <span class="input-group-text" id="filter-max-amount">
+                          <i class="calendar-icon" aria-hidden="true"></i>
+                      </span>
+                  </div>
+                  <input class="form-control" 
+                    type="date" 
+                    formControlName="date"
+                  >
+              </div>
+            </div>
+          </div>        
+        </div>
+        <div class="row">
+          <div class="col col-md-2"></div>
+          <div class="col col-md-6">              
+            <div class="form-group">
+                <select id="" formControlName="select_activity_function" class="form-control" 
+                (change)="selectActivityFunctionChange($event)"
+                [ngClass]="schedH2.get('select_activity_function')?.invalid 
+                            ? 'input-field-error' : ''"
+                >
+                    <option value="" selected>Select Activity Function</option> 
+                    <option value="f">Fundraising</option>
+                    <option value="d">Direct Candidate Support</option>
+                </select>
+            </div>
+                    
+          </div>            
+        </div>
+        <div class="row col coord_expenditure_text">
+          <h3>Check if the Ratio is:</h3>
+          <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
+              tooltipClass="form-tooltip">
+              <i class="info-icon" aria-hidden="true"></i>
+              <span class="sr-only">Click here for more information</span>
+          </button>
+        </div>
+        <div class="row subtitle">
+            <div class="row col-md-12">
+              <div class="col-md-4">
+                  <input type="radio" formControlName="ratio_code" value="n">New
+              </div>
+              <div class="col-md-4">
+                  <input type="radio" formControlName="ratio_code" value="r">Revised
+              </div>
+              <div class="col-md-4">
+                  <input type="radio" formControlName="ratio_code" value="s">Same as Previously Reported
+              </div>
+            </div>
+        </div>
+        <div class="row">
+              <div class="col col-md-2"></div>
+              <div class="col col-md-3 form-group">
+                <div class="row input-group">
+                  <label for="">
+                      <h1>Federal:</h1>
+                  </label>
+                  <input class="form-control" 
+                    type="number" 
+                    formControlName="federal_percent"
+                    [ngClass]="schedH2.get('federal_percent')?.invalid 
+                            ? 'input-field-error' : ''"                      
+                    (keyup)="handlePercentFieldKeyup(this)"
+                  >
+                  <div class="input-group-prepend">
+                      <span class="input-group-text" id="filter-max-amount">
+                          <i class="fa fa-percent" aria-hidden="true"></i>
+                      </span>
+                  </div>
+                </div>
+                <div class="text-error text-left"
+                  *ngIf="schedH2.get('federal_percent').errors?.min || schedH2.get('federal_percent').errors?.max"
+                >
+                  Only 0 - 100 allowed.
+                </div>
+              </div>
+              <div class="col col-md-3 form-group">
+                  <div class="row input-group">
+                      <label for="">
+                          <h1>Nonfederal:</h1>                            
+                      </label>
+                      <input class="form-control" 
+                        type="number" 
+                        formControlName="non_federal_percent"
+                        [ngClass]="schedH2.get('non_federal_percent')?.invalid 
+                            ? 'input-field-error' : ''"
+                        (keyup)="handleFormFieldKeyup($event)"
+                      >
+                      <div class="input-group-prepend">
+                          <span class="input-group-text" id="filter-max-amount">                                
+                              <i class="fa fa-percent" aria-hidden="true"></i>
+                          </span>
+                      </div>
+                      <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
+                          tooltipClass="form-tooltip">
+                          <i class="info-icon" aria-hidden="true"></i>
+                          <span class="sr-only">Click here for more information</span>
+                      </button>
+                  </div>
+                  <div class="text-error text-left"
+                    *ngIf="schedH2.get('non_federal_percent').errors?.min || schedH2.get('non_federal_percent').errors?.max"
+                  >
+                    Only 0 - 100 allowed.
+                  </div>
+              </div>
+                     
+        </div>
+      </div>
+
+      <footer>
+        <footer>
+          <div class="grid-row">
+            <div class="grid-row__col grid-row__col--12">
+              <div class="forms__btn-container">
+                <button class="btn btn-previous btn-left" type="button" 
+                  (click)="clearFormValues(); previousStep()">
+                  Previous
+                </button>
+                <a class="btn btn-primary btn-right" (click)="returnToSum()">
+                  Summary
+                </a>
+                <button class="btn btn-previous btn-right" type="button" (click)="saveAndAddMore()">
+                  Add
+                </button>               
+              </div>
+            </div>
+          </div>
+        </footer>
+      </footer>
+    </section>
+
+    <section *ngIf="transactionType === 'ALLOC_H2_SUM'">
+      <div [hidden]="showPart2" class="paragraph">
+        <ng-container>              
+            <table class="table table-striped table-hover table__sortable">
+                <thead>
+                    <tr>
+                        <th [@fadeInOut]>                              
+                        </th>
+                        <th [@fadeInOut]
+                            (click)="changeSortDirection('activity_event_name')">Activity or Event Identifier
+                            <i class="fa fa-sort" aria-hidden="false"></i>
+                        </th>
+                        <th [@fadeInOut]
+                            (click)="changeSortDirection('activity')">Activity
+                            <i class="fa fa-sort" aria-hidden="false"></i>
+                        </th>
+                        <th [@fadeInOut]
+                            (click)="changeSortDirection('date')">Date
+                            <i class="fa fa-sort" aria-hidden="false"></i>
+                        </th>
+                        <th [@fadeInOut]
+                            (click)="changeSortDirection('ratio_code')">Ratio Type
+                            <i class="fa fa-sort" aria-hidden="false"></i>
+                        </th>
+                        <th [@fadeInOut]
+                            (click)="changeSortDirection('federal_percent')">Federal
+                            <i class="fa fa-sort" aria-hidden="false"></i>
+                        </th>
+                        <th [@fadeInOut]
+                            (click)="changeSortDirection('non_federal_percent')">Nonfederal
+                            <i class="fa fa-sort" aria-hidden="false"></i>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <ng-container >
+                        <tr *ngFor="let item of h2Sum | paginate: tableConfig">
+                        <td>
+                            <input type="checkbox" (click)="checkForMultiChecked($event)">
+                        </td>
+                        <td>{{ item.activity_event_name }}</td>
+                        <td>
+                            <div *ngIf="item.event_type == 'fundraising'">Fundraising</div>
+                            <div *ngIf="item.event_type == 'direct_cand_suppot'">Direct Candidate Suppot</div>
+                        </td>
+                        <td>{{ item.Date | date: 'MM/dd/yyyy' }}</td>                          
+                        <td>
+                          <div *ngIf="item.ratio_code == 'n'">New</div>
+                          <div *ngIf="item.ratio_code == 'r'">Revised</div>
+                          <div *ngIf="item.ratio_code == 's'">Same as Previously Reported</div>  
+                        </td>                          
+                        <td>
+                          <div *ngIf="item.federal_percent < 0.1">{{ item.federal_percent | percent:'1.0-2' }}</div>
+                          <div *ngIf="item.federal_percent >= 0.1">{{ item.federal_percent | percent:'2.0-2' }}</div>                            
+                        </td>
+                        <td>
+                          <div *ngIf="item.non_federal_percent < 0.1">{{ item.non_federal_percent | percent:'1.0-2' }}</div>
+                          <div *ngIf="item.non_federal_percent >= 0.1">{{ item.non_federal_percent | percent:'2.0-2' }}</div>
+                        </td>
+
+                        <td class="bulk_action" >
+                            <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+        
+                                <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                                    <i class="ellipsis-icon"></i>
+                                </button>
+
+                                <div id="sched-h2__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                                    <button class="dropdown-item">
+                                        <i class="fas fa-eye"></i> View
+                                    </button>
+                                    <button class="dropdown-item">
+                                        <i class="fas fa-print"></i> Print
+                                    </button>
+                                    <button class="dropdown-item">
+                                      <i class="fas fa-edit"></i> Edit
+                                  </button>
+                                    <button class="dropdown-item">
+                                        <i class="fas fa-trash"></i> Trash
+                                    </button>
+                                </div>
+                            </div>
+                        </td>
+                        
+                    </tr>
+                    </ng-container>
+                </tbody>
+            </table>              
+            <hr/>
+            <div class="d-flex justify-content-center contacts__table-pagination-container">
+              <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+            </div>
+        </ng-container>
+      </div>
+
+      <footer>
+        <footer>
+          <div class="grid-row">
+            <div class="grid-row__col grid-row__col--12">
+              <div class="forms__btn-container">
+                <button class="btn btn-previous btn-left" type="button" 
+                (click)="clearFormValues(); previousStep()">
+                  Previous
+                </button>
+                
+                <a class="btn btn-previous btn-right" (click)="returnToAdd()">
+                  Add
+                </a>                                 
+              </div>
+            </div>
+          </div>
+        </footer>
+      </footer>
+    </section>
+    
+  </form>
+</div>
