Fne 1507 sprint24 mahendra ver1 (#1390)
* Update loan.component.html

* Update loan.component.ts

* Update report-type.service.ts

* Update upload_report.py

* Update loan.component.scss

--- a/front-end/src/app/forms/sched-c/loan.component.scss
+++ b/front-end/src/app/forms/sched-c/loan.component.scss
@@ -21,7 +21,7 @@
         width: 98%;*/
         margin-left: 10px;
         display: block;
-        width: 20%;
+        width: 98%;
         h1 {
           //font-family: sans-serif;
         }
@@ -95,6 +95,12 @@
               color: $blueZodiac;
             }
           }
+          .input-group-append {
+            .input-group-text {
+              color: $blueZodiac;
+            }
+          }
+
           /**
            * Custom CSS for state dropdown component.
            */
