Fne 1507 sprint24 mahendra ver1 (#1394)
* Update loan.component.html

* Update loan.component.ts

* Update report-type.service.ts

* Update upload_report.py

* Update loan.component.scss

* Update upload_report.py

* Update loan.component.html

* Update loan.component.ts

* Update loan.service.ts

* Update transaction-type.component.ts

* Update views.py

* Update loan_fields.json

--- a/front-end/src/app/forms/sched-c/loan.component.html
+++ b/front-end/src/app/forms/sched-c/loan.component.html
@@ -340,7 +340,7 @@
                   >
                   </ng-select>
               </ng-container>
-              <ng-container *ngIf="col?.type === 'select' && col?.name === 'loansecured'">
+              <!--<ng-container *ngIf="col?.type === 'select' && col?.name === 'loansecured'">
                   <ng-select #loansecuredSelect
                     [items]="secured"
                     (change)="handleloansecuredChange($event, col)"
@@ -357,9 +357,26 @@
                     "
                   >
                   </ng-select>
-              </ng-container>              
-                
+              </ng-container>  -->            
 
+              <ng-container *ngIf="col?.type === 'select' && col?.name === 'election_code'">
+                <ng-select #electioncodeSelect
+                  [items]="electionTypes"
+                  (change)="electionTypeChanged($event, col)"
+                  [style.width]="col?.width"
+                  [style.height]="col?.height"
+                  [formControlName]="col?.name"
+                  bindValue="code"
+                  bindLabel="name" 
+                  [ngClass]="
+                    frmLoan.get(col?.name)?.invalid &&
+                    (frmLoan.touched || frmLoan.dirty)
+                      ? 'state-select-error'
+                      : ''
+                  "
+                >
+                </ng-select>
+            </ng-container>         
              </div>
             </div>
             <!-- ./col -->
